# series-troxide

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  release.yml  run-build.yml  run-tests.yml  rust.yml
assets/logos/: series-troxide.ascii
src/: api.rs  args.rs  cli.rs  database.rs  lib.rs  main.rs  widget.rs
src/args/: database_cli.rs  episode_cli.rs  season_cli.rs  series_cli.rs
src/cli/: database_cli.rs  episode_cli.rs  series_cli.rs
src/core/: api.rs  caching.rs  cli.rs  database.rs  mod.rs  notifications.rs  paths.rs  posters_hiding.rs  program_state.rs  settings_config.rs
src/core/api/: crates.rs  episodes_information.rs  mod.rs  seasons_list.rs  series_information.rs  series_searching.rs  show_cast.rs  show_images.rs  tv_schedule.rs  updates.rs
src/core/api/trakt/: mod.rs
src/core/api/tv_maze/: episodes_information.rs  image.rs  mod.rs  seasons_list.rs  series_information.rs  show_cast.rs  show_lookup.rs  tv_schedule.rs  updates.rs
src/core/api/tv_maze/people/: mod.rs  show_cast.rs  show_crew.rs
src/core/caching/: cache_cleaning.rs  cache_updating.rs  episode_list.rs  people.rs  series_info_and_episode_list.rs  series_information.rs  series_list.rs  show_cast.rs  show_images.rs  tv_schedule.rs
src/core/caching/tv_schedule/: full_schedule.rs
src/core/database/: database_transfer.rs  db_models.rs  series_tree.rs
src/gui/: assets.rs  helpers.rs  message.rs  mod.rs  troxide_widget.rs
src/gui/series_page/: mini_widgets.rs  mod.rs  series_suggestion_widget.rs
src/gui/series_page/series/: cast_widget.rs  casts_widget.rs  data_widgets.rs  mini_widgets.rs  mod.rs  season_widget.rs  series_suggestion_widget.rs
src/gui/series_page/series/people_widget/: cast_widget.rs  crew_widget.rs  mod.rs
src/gui/styles/: button_styles.rs  colors.rs  container_styles.rs  mod.rs  scrollable_styles.rs  svg_styles.rs  text_styles.rs  theme.rs  toggler_styles.rs
src/gui/tabs/: discover_view.rs  mod.rs  my_shows_view.rs  settings_view.rs  tab_searching.rs  watchlist_tab.rs  watchlist_view.rs
src/gui/tabs/discover_tab/: full_schedule.rs  mod.rs  searching.rs
src/gui/tabs/my_shows_tab/: mod.rs  my_shows_widget.rs  upcoming_releases_widget.rs
src/gui/tabs/my_shows_view/: my_shows_widget.rs  upcoming_releases_widget.rs
src/gui/tabs/settings_tab/: about_widget.rs  appearance_widget.rs  caching_widget.rs  database_widget.rs  discover_widget.rs  locale_widget.rs  mod.rs  notifications_widget.rs  settings_controls_widget.rs
src/gui/tabs/settings_tab/database_widget/: trakt_integration.rs
src/gui/tabs/settings_view/: caching_widget.rs  locale_widget.rs
src/gui/tabs/statistics_tab/: mini_widgets.rs  mod.rs
src/gui/troxide_widget/: mod.rs  series_page.rs
src/gui/view/: discover_view.rs  menu_view.rs  mod.rs  my_shows_view.rs  search_view.rs  series_view.rs  settings_view.rs  statistics_view.rs  watchlist_view.rs
src/gui/view/discover_view/: searching.rs
src/gui/view/my_shows_view/: my_shows_widget.rs  upcoming_releases_widget.rs
src/gui/view/series_view/: cast_widget.rs  mini_widgets.rs  season_widget.rs
src/gui/view/settings_view/: about_widget.rs  caching_widget.rs  database_widget.rs  locale_widget.rs  notifications_widget.rs
src/gui/view/statistics_view/: mini_widgets.rs
src/troxide_widget/: mod.rs  series_page.rs
troxide/: Cargo.toml
troxide/src/: main.rs
troxide_core/: Cargo.toml
troxide_core/src/: lib.rs
troxide_term/: Cargo.toml
troxide_term/src/: lib.rs
troxide_term/src/cli/: episode_cli.rs  season_cli.rs  series_cli.rs
