[package]
name = "series-troxide"
authors = ["Maarifa Maarifa <maarifamaarifa20@gmail.com>"]
license = "GPL-3.0"
description = "A Simple and Modern Series Tracker"
categories = ["series", "TV", "gui", "tracker"]
keywords = ["series-tracker", "tv-shows", "tv-series", "entertainment", "gui"]
repository = "https://github.com/MaarifaMaarifa/series-troxide"
readme = "README.md"
version = "0.5.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
iced = { version = "0.10.0", features = ["image", "svg", "tokio"] }
iced_aw = { version = "0.7.0", features = ["spinner"] }
anyhow = "1.0.80"
thiserror = "1.0.57"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.2"
json = "0.12.4"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
sled = "0.34.7"
bincode = "1.3.3"
rand = "0.8.5"
indexmap = { version = "2.2.3", features = ["serde"] }
directories = "5.0.1"
lazy_static = "1.4.0"
sha2 = "0.10.8"
chrono = { version = "0.4.34", features = ["serde"] }
html2text = "0.12.0"
bytes = "1.4.0"
rfd = "0.13.0"
rust_iso3166 = "0.1.11"
image = "0.24.8"
webbrowser = "0.8.12"
notify-rust = "4.9.0"
notify = "6.1.1"
num-traits = "0.2.18"
semver = "1.0.22"
ron = "0.8.1"
smallvec = "1.13.1"
fuzzy-matcher = "0.3.7"

[build-dependencies]
built = { version = "0.7.1", features = ["git2", "chrono"] }

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

allow-dirty = ["ci", "msi"]
