[package]
name = "series-troxide"
authors = ["Maarifa Maarifa <maarifamaarifa20@gmail.com>"]
license = "GPL-3.0"
description = "A Simple and Modern Series Tracker"
categories = ["series", "TV", "gui", "tracker"]
keywords = ["series-tracker", "tv-shows", "tv-series", "entertainment", "gui"]
repository = "https://github.com/MaarifaMaarifa/series-troxide"
readme = "README.md"
version = "0.5.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
iced = { version = "0.13.1", features = ["image", "svg", "tokio"] }
iced_aw = { version = "0.11", features = ["spinner"] }
anyhow = "1.0.90"
thiserror = "1.0.64"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
json = "0.12.4"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
sled = "0.34.7"
bincode = "1.3.3"
rand = "0.8.5"
indexmap = { version = "2.6.0", features = ["serde"] }
directories = "5.0.1"
lazy_static = "1.5.0"
sha2 = "0.10.8"
notify-rust = "4.11.3"
chrono = { version = "0.4.38", features = ["serde"] }
html2text = "0.12.5"
bytes = "1.7.2"
rfd = "0.15.0"
image = "0.25.2"
rust_iso3166 = "0.1.13"
webbrowser = "1.0.2"
notify = "6.1.1"
num-traits = "0.2.19"
semver = "1.0.23"
ron = "0.8.1"
smallvec = "1.13.2"
fuzzy-matcher = "0.3.7"

[build-dependencies]
built = { version = "0.7.4", features = ["git2", "chrono"] }

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

allow-dirty = ["ci", "msi"]
