[package]
name = "series-troxide"
authors = ["Maarifa Maarifa"]
description = "A Series Tracker with powerfull command-line options"
categories = ["command-line-utilities", "series", "TV"]
repository = "https://github.com/MaarifaMaarifa/series-troxide"
version = "0.0.2"
edition = "2021"

[dependencies]
troxide_core = { path = "../troxide_core" }
troxide_term = { path = "../troxide_term" }
clap = { version = "4"}
anyhow = "1"
